Fix scrollbar on membership index

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -32,6 +32,7 @@
       display: flex;
       height: 100%;
       flex-shrink: 10000;
+      position: relative;
 
       .app-message-column {
         flex-grow: 1;
@@ -40,8 +41,16 @@
       }
 
       .app-memberships-column {
+        min-width: 240px;
+        height: 100%;
+        position: absolute;
+        right: -17px;
+        padding-right: 17px;
+        z-index: 5;
         display: flex;
         flex-direction: column;
+        overflow-x: hidden;
+        overflow-y: scroll;
       }
     }
 
