--- a/app/assets/stylesheets/membership/membership.scss
+++ b/app/assets/stylesheets/membership/membership.scss
@@ -1,16 +1,13 @@
 .membership-index-container {
-  min-width: 240px;
-  max-width: 240px;
-  overflow: scroll;
+  width: 100%;
+  height: 100%;
   background: #2C2F33;
-  box-sizing: border-box;
+  box-sizing: content-box;
   color: rgba(255,255,255,0.8);
   flex-grow: 1;
 
   .membership-list {
-    overflow: scroll;
-    min-height: 100%;
-    max-height: 100%;
+    background: inherit;
 
     .membership-sub-list {
       padding: 10px;
